# AITaskMaster

./: .env  .gitignore  .replit  CHANGELOG.md  README.md  Task_Master.py  USAGE_GUIDE.md  Untitled1.ipynb  ai_processor.py  app.py  app_broken.py  app_old.py  config.yaml  data_handler.py  database.py  debug_app.py  doc_mapping.pkl  meeting.txt  project_nova_brief.txt  pyproject.toml  replit.md  run.py  task_manager.py  task_master.db  task_master_index.faiss  test.txt  utils.py  visualization.py  🤖_Task_Master.py
.virtual_documents/: Untitled1.ipynb
data/: tasks.db
pages/: 1_✍️_Paste_Text.py  2_📂_Extract_Tasks_from_File.py  2_📂_Upload_File.py.py  3_🗃️_History_&_Planning.py  4_Jira_Import.py.py  4_🎫_Jira_Import.py.py  4_🗃️_History_&_Planning.py  5_🗓️_Calendar.py  6_⚙️_Settings.py.py  6_🧠_AI_Task_Breakdown.py  7_📈_Weekly_Summary.py  7_🧠_AI_Task_Breakdown.py  8_📚_Context_Manager.py  9_⚙️_Settings.py
task_assistant/: agent.py  data_ingestor.py  database_handler.py  file_handler.py  jira_handler.py  logger_config.py  prompts.py  rules_engine.py  schemas.py  services.py  tools.py  utils.py  vector_store_handler.py
